src/components/FamilyMemberCard/FamilyMemberCard.module.css
.familyMemberCard {
  display: flex;
  flex-direction: column-reverse;
  justify-content: flex-start;
  align-items: flex-start;

  height: 100px;
  width: 120px;
  margin: 20px;
}

.familyMemberCard > .name {
  font-size: 30px;
}

.familyMemberCard > .relation {
  font-size: 10px;
}

.familyMemberCardOptions {
  display: flex;
  align-items: center;
  margin-left: 50px;
  margin-bottom: 20px;
}

.familyMemberCardOptions > button {
  height: 24px;
  margin-left: 5px;
}

.hidden {
  display: none;
}

